examples/bad/ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION/simple_let_reconstruct.st
language core;

extend with #type-reconstruction, #let-bindings;

fn main(n : Nat) -> Nat {
  return let t = true in t
}//ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION
\n\n//ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION
/n/n//ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION
